@@ -14,14 +14,21 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
+        <maven.build.helper.plugin.version>3.0.0</maven.build.helper.plugin.version>
+        <!-- <junit.version>4.12</junit.version> -->
+        <!-- <cucumber.version>4.2.0</cucumber.version> -->
+        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
 		<java.version>1.8</java.version>
-    <cucumber.java.version>1.2.5</cucumber.java.version>
-    <selenium.version>3.13.0</selenium.version>
+        <cucumber.java.version>1.2.5</cucumber.java.version>
+        <selenium.version>3.13.0</selenium.version>
+        <generated.runner.directory>${project.build.directory}/parallel/runners</generated.runner.directory>
+        <generated.feature.directory>${project.build.directory}/parallel/features</generated.feature.directory>
+    </properties>
 
-	</properties>
 
 	<dependencies>
     <!--Spring Boot -->
@@ -120,7 +127,10 @@
 
 	</dependencies>
 
-	<build>
+   <profiles>
+    <profile>
+     <id>default</id>
+	 <build>
         <resources>     
             <resource>
                 <directory>src/main/resources</directory>
@@ -134,23 +144,157 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.0.3.RELEASE</version>
+                <version>2.0.3.RELEASE</version>
 			</plugin>
-       <!-- <plugin>
+        </plugins>
+     </build>
+     </profile>
+   
+     <profile>
+     <id>ci</id>
+        <build>
+            <plugins>
+            <plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+	
+         <plugin>
+                <groupId>com.trivago.rta</groupId>
+                <artifactId>cucable-plugin</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <id>generate-test-resources</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>parallel</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- This can be either a Java class file or a text based template -->
+                    <sourceRunnerTemplateFile>src/test/java/org/galileo1/bdd/some/CucableJavaTemplate.java
+                    </sourceRunnerTemplateFile>
+                    <!--<sourceRunnerTemplateFile>src/test/resources/cucable.template</sourceRunnerTemplateFile>-->
+
+                    <!-- process all features in the given directory -->
+                    <!--<sourceFeatures>src/test/resources/features</sourceFeatures>-->
+                    <!-- process a specific feature file in the given directory -->
+                    <sourceFeatures>src/test/java/org/galileo1/bdd/features/RetirementCalculator.feature</sourceFeatures>
+
+                    <!-- process a specific feature file and specific line numbers in the given directory -->
+                    <!--<sourceFeatures>src/test/resources/features/testfeature/MyTest1.feature:8:19</sourceFeatures>-->
+
+                    <generatedFeatureDirectory>${generated.feature.directory}</generatedFeatureDirectory>
+                    <generatedRunnerDirectory>${generated.runner.directory}</generatedRunnerDirectory>
+
+                    <!-- optional: custom data that is available in Cucable placeholders in a template -->
+                    <!--<customPlaceholders>-->
+                        <!--<comment>This should appear inside the template</comment>-->
+                    <!--</customPlaceholders>-->
+
+                    <!-- optional: include scenarios with certain tags -->
+                    <!--<includeScenarioTags>-->
+                        <!--<param>@scenarioTag1</param>-->
+                        <!--<param>@scenarioTag2</param>-->
+                    <!--</includeScenarioTags>-->
+
+                    <!-- optional: exclude scenarios with certain tags -->
+                    <!--<excludeScenarioTags>-->
+                        <!--<param>@skipme</param>-->
+                    <!--</excludeScenarioTags>-->
+
+                    <!-- optional: change parallelization mode of Cucable (default: "scenarios")-->
+                    <!--<parallelizationMode>scenarios</parallelizationMode>-->
+                    <!--<parallelizationMode>features</parallelizationMode>-->
+
+                    <!-- optional: number of test runs to create runners and features multiple times
+                         if set to a number greater than 1 -->
+                    <!--<numberOfTestRuns>1</numberOfTestRuns>-->
+
+                    <!-- optional: generate fixed number of runners and distribute all features round-robin. -->
+                    <!--<desiredNumberOfRunners>2</desiredNumberOfRunners>-->
+
+                    <!-- optional: Cucable log level -->
+                    <!--<logLevel>default</logLevel>-->
+                    <!--<logLevel>compact</logLevel>-->
+                    <!--<logLevel>minimal</logLevel>-->
+                    <!--<logLevel>off</logLevel>-->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>${maven.build.helper.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${generated.runner.directory}</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                  <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks> -->
-                    <!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                </configuration>  
-            </plugin> -->
-		</plugins>
-	</build>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.failsafe.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>Run parallel tests</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <forkCount>2</forkCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+        <groupId>com.trivago.rta</groupId>
+        <artifactId>cluecumber-report-plugin</artifactId>
+        <version>1.5.0</version>
+        <executions>
+            <execution>
+                <id>report</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                    <goal>reporting</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+            <sourceJsonReportDirectory>${project.build.directory}/cucumber-report</sourceJsonReportDirectory>
+            <generatedHtmlReportDirectory>${project.build.directory}/test-report</generatedHtmlReportDirectory>
+        </configuration>    
+    </plugin>
+        </plugins>
+      
+	</build>    
+      </profile>
+       </profiles>
+
 </project>
 
 
